hotfix: fix layout problems

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -1,6 +1,7 @@
 .gallery {
-  max-width: 1180px;
+  max-width: 1280px;
   margin: 100px auto;
+  padding: 0 4%;
 }
 
 .gallery__title {
