--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,5 @@
 .header {
   max-width: 1280px;
-  margin: 50px auto;
+  margin: 0 auto;
+  padding: 0 4%;
 }
